--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,7 +26,6 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
         </dependency>
 
         <dependency>
@@ -56,6 +55,7 @@
         <dependency>
             <groupId>com.hubspot.slack</groupId>
             <artifactId>slack-base</artifactId>
+            <version>1.3</version>
         </dependency>
 
         <dependency>
