--- a/api/pom.xml
+++ b/api/pom.xml
@@ -81,5 +81,10 @@
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-firestore</artifactId>
+            <version>1.21.0</version>
+        </dependency>
     </dependencies>
 </project>
